tests/script_errors/lexer_unterminated_string2/error.txt
Error: 
    1 | let s = "this is a string;
      |         ^^^^^^^^^^^^^^^^^^ It looks like you forgot to terminate a string with a closing '"'
    2 | event
